# living-folders

./: .gitignore  .living-folder.json  README.md  initial-seed.md  pyproject.toml  zoo-project.json
docs/raw/: 001__conversation.json  010__living-folders-orientation.json  020__living-folder-manifest-softspec.json
launchers/: living-folders-debug.bat  living-folders.bat  living-folders.pyw
src/livingfolders/: __init__.py  __main__.py  app.py  core.py  discrete.py  runtime.py
tests/: test_core.py  test_discrete.py  test_launchers.py  test_runtime.py
