[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "living-folders"
version = "0.6.0"
description = "A semantic lens that lets directories present themselves as places."
readme = "README.md"
requires-python = ">=3.11"
license = "CC0-1.0"
authors = [
  {name = "Lion Kimbro"},
]
dependencies = [
  "lionscliapp>=0.1.2",
  "Pillow>=10",
  "tkinterdnd2>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
